email backend is working now!

--- a/app/views/pages/giving.html.erb
+++ b/app/views/pages/giving.html.erb
@@ -1,6 +1,9 @@
 <!-- Page Header -->
-<div class="text-white relative overflow-visible bg-gradient-to-l from-orange-600 to-orange-400" style="height: 500px;">
+<div class="text-white relative overflow-visible bg-gradient-to-l from-[#ec6b3c] to-[#ef542e]" style="height: 500px;">
   <div class="flex flex-row items-center max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
+    <div class="w-full lg:w-1/2 flex justify-center relative" style="z-index:2;">
+      <img src="<%= asset_path('community.jpg') %>" alt="Giving" class="h-auto shadow-lg object-contain" style="max-width: 630px; position: absolute; top: -70px; left: 40%; transform: translateX(-50%);" />
+    </div>
     <div class="mt-48 w-full lg:w-1/2 flex flex-col justify-center items-start z-10">
       <h1 class="font-bold tracking-tight text-lg">GIVING</h1>
       <p class="mt-2 text-3xl max-w-3xl font-semibold">Support our ministry and make a difference in our community.</p>
