--- a/app/views/pages/sermons.html.erb
+++ b/app/views/pages/sermons.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<div class="text-white relative overflow-visible bg-gradient-to-l from-orange-600 to-orange-400" style="height: 500px;">
+<div class="text-white relative overflow-visible bg-gradient-to-l from-[#ec6b3c] to-[#ef542e]" style="height: 500px;">
   <div class="flex flex-row items-center max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
     <div class="w-full lg:w-1/2 flex justify-center relative" style="z-index:2;">
       <img src="<%= asset_path('boy.jpg') %>" alt="Boy" class="h-auto shadow-lg object-contain" style="max-width: 650px; position: absolute; top: -30px; left: 40%; transform: translateX(-50%);" />
@@ -8,10 +8,10 @@
       <h1 class="font-bold tracking-tight text-lg">SERMONS</h1>
       <p class="mt-2 text-3xl max-w-3xl font-semibold">Watch and listen to our latest sermons and teachings.</p>
       <div class="mt-8 flex justify-center space-x-4">
-      <a href="https://www.youtube.com/@tharamburuproductionsusa6211/featured" class="inline-block bg-red-600 text-white px-8 py-3 rounded-md font-medium hover:bg-red-700">
-        Subscribe on YouTube
-      </a>
-    </div>
+        <a href="https://www.youtube.com/@tharamburuproductionsusa6211/featured" class="inline-block bg-red-600 text-white px-8 py-3 rounded-md font-medium hover:bg-red-700">
+          Watch on YouTube
+        </a>
+      </div>
     </div>
   </div>
 </div>
