--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "JICC" %></title>
+    <title><%= content_for(:title) || "Discover and Maximize your potential | JICC" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
@@ -24,6 +24,7 @@
 
   <body class="min-h-screen flex flex-col">
     <%= render "shared/navigation" %>
+    <%= render "shared/flash" %>
     
     <main class="flex-grow">
       <%= yield %>
