--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<div class="text-white relative overflow-visible bg-gradient-to-l from-orange-600 to-orange-400" style="height: 500px;">
+<div class="text-white relative overflow-visible bg-gradient-to-l from-[#ec6b3c] to-[#ef542e]" style="height: 500px;">
   <div class="flex flex-row items-center max-w-7xl mx-auto h-full px-4 sm:px-6 lg:px-8">
     <div class="w-full lg:w-1/2 flex justify-center relative" style="z-index:2;">
       <img src="<%= asset_path('about.jpg') %>" alt="Bible" class="h-auto shadow-lg object-contain" style="max-width: 750px; position: absolute; top: -70px; left: 40%; transform: translateX(-50%);" />
